initial creation of html elements

--- a/app/index.html
+++ b/app/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | GitHub user search app</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-  devfinder
+    <title>Frontend Mentor | GitHub user search app</title>
+  </head>
+  <body>
+    <h1>devfinder</h1>
+    <h2>DARK</h2>
+    <img src="../app/assets/icon-moon.svg" alt="moon icon" />
+    <!-- search bar -->
+    <section>
+      <img src="../app/assets/icon-search.svg" alt="search icon" />
+      <input
+        type="text"
+        placeholder="Search GitHub username..."
+        class="searchInput"
+      />
+      <button>Search</button>
+    </section>
 
-  Light
-  Dark
-
-  Search GitHub username...
-  Search
-
-  Joined
-
-  Repos
-  Followers
-  Following
-
-</body>
+    <!-- search result card -->
+  </body>
 </html>
